force-app/main/default/objects/GTM_Agent_Settings__c/GTM_Agent_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for the GTM Agentforce proxy (Claude API stand-in until Agentforce is provisioned).</description>
    <label>GTM Agent Settings</label>
</CustomObject>