force-app/main/default/objects/GTM_Agent_Settings__c/fields/Agentforce_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Agent_Id__c</fullName>
    <description>ID of the published Agentforce agent for the upcoming Agent API integration. Saved but inactive: GUS does not call Agentforce yet. Not a secret.</description>
    <label>Agentforce Agent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>