force-app/main/default/objects/GTM_Agent_Settings__c/fields/Agentforce_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Client_Id__c</fullName>
    <description>OAuth consumer key of the External Client App for the upcoming Agentforce integration. An identifier, not a secret. The consumer secret is deliberately NOT stored in this Custom Setting (Named Credential in a later phase).</description>
    <label>Agentforce Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>