force-app/main/default/objects/GTM_Agent_Settings__c/fields/Agentforce_My_Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_My_Domain_URL__c</fullName>
    <description>Org My Domain URL (https://...) used for the Agentforce Agent API OAuth flow and as the Start Session instanceConfig.endpoint value (Apex re-appends the required trailing slash; stored without one). Live for the GUS configurator chat (chat()) only. Not a secret.</description>
    <label>Agentforce My Domain URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>