force-app/main/default/objects/GTM_Agent_Settings__c/fields/Chat_Provider__c.field-meta.xml
<CustomField>
    <fullName>Chat_Provider__c</fullName>
    <description>Which chat/LLM provider GtmAgentProxyController.runLoop() calls for GUS. Anthropic is the default and preserves pre-existing behavior when left blank/unset. Plain Text (not Picklist) because GTM_Agent_Settings__c is a Hierarchy Custom Setting and Custom Settings do not support Picklist fields -- the 'Anthropic'/'OpenAI'/'Gemini'/'Agentforce' value constraint is enforced at the Apex layer in GtmAgentSettingsController.setAgentSettings() instead.</description>
    <label>Chat Provider</label>
    <length>40</length>
    <type>Text</type>
</CustomField>