force-app/main/default/objects/GTM_Agent_Settings__c/fields/Claude_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Claude_API_Key__c</fullName>
    <description>Anthropic API key for the Claude proxy. Set in Setup → Custom Settings → GTM Agent Settings → Manage → New (org default).</description>
    <label>Claude API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>