force-app/main/default/objects/GTM_Agent_Settings__c/fields/Claude_Model__c.field-meta.xml
<CustomField>
    <fullName>Claude_Model__c</fullName>
    <description>Claude model ID to use for the proxy. Defaults to claude-sonnet-5 if blank.</description>
    <label>Claude Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>