force-app/main/default/objects/GTM_Agent_Settings__c/fields/Gemini_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Gemini_API_Key__c</fullName>
    <description>Google Gemini API key for the GUS chat proxy, used when Chat_Provider__c is Gemini. Plain Text: GTM_Agent_Settings__c is a Hierarchy Custom Setting, which does not support EncryptedText; protection is the Apex-level write-only/never-prefill boundary in GtmAgentSettingsController, matching Claude_API_Key__c and OpenAI_API_Key__c.</description>
    <label>Gemini API Key</label>
    <length>175</length>
    <type>Text</type>
</CustomField>