force-app/main/default/objects/GTM_Agent_Settings__c/fields/Gemini_Model__c.field-meta.xml
<CustomField>
    <fullName>Gemini_Model__c</fullName>
    <description>Gemini model ID for the proxy when Chat_Provider__c is Gemini. Mirrors Claude_Model__c. Defaults to gemini-2.5-flash if blank (a convenience default that may go stale; override here).</description>
    <label>Gemini Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>