force-app/main/default/objects/GTM_Agent_Settings__c/fields/OpenAI_Model__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Model__c</fullName>
    <description>OpenAI model ID to use for the proxy when Chat_Provider__c is OpenAI. Mirrors Claude_Model__c. Defaults to gpt-4o if blank.</description>
    <label>OpenAI Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>